--- a/src/app.scss
+++ b/src/app.scss
@@ -16,14 +16,13 @@
 
   body {
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     margin: 0;
     padding: 0;
     overflow: auto;
 
     @supports (min-height: 100dvh) {
       height: 100dvh;
-      width: 100dvw;
     }
   }
 
