--- a/src/app.scss
+++ b/src/app.scss
@@ -1,4 +1,5 @@
 :root {
+    font-size: 20px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     --primary:#bb86fc; 
     --primary-variant:#3700b3; 
