--- a/src/app.scss
+++ b/src/app.scss
@@ -1,3 +1,4 @@
+@use 'variables';
 :root {
   font-size: 20px;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
@@ -27,24 +28,5 @@ body {
 }
 
 button, .button {
-  cursor: pointer;
-  font-size: .8   25em;
-  align-self: center;
-  padding-inline: .775em;
-  padding-block: .225em;
-  background-color: var(--primary);
-  color: var(--on-primary);
-  border: 0.2ch solid var(--primary-variant);
-  width: fit-content;
-  border-radius: 0.225em;
-  &:hover,
-  &:focus,
-  &:focus-visible,
-  &:focus-within {
-    background-color: var(--primary-variant);
-    color: var(--secondary);
-    border: 0.2ch solid var(--secondary-variant);
-    filter: drop-shadow(0em 0em 0.125em var(--secondary));
-    transition: all 170ms ease-in-out;
-  }
+  @include button;
 }
