Minor style changes

--- a/src/variables.scss
+++ b/src/variables.scss
@@ -28,3 +28,18 @@
         transition: all 170ms ease-in-out;
     }
 }
+
+@mixin scrollbar {
+    scroll-behavior: smooth;
+    scrollbar-color: var(--primary);
+    scrollbar-width: 0.3ch;
+    scrollbar-gutter: stable;
+    &::-webkit-scrollbar {
+        background-color: transparent;
+        width: 0.3ch;
+    }
+    &::-webkit-scrollbar-thumb {
+        background-color: var(--primary);
+        border-radius: 1em;
+    }
+}
