--- a/src/app.scss
+++ b/src/app.scss
@@ -1,7 +1,12 @@
-@use 'variables';
+@use "variables";
 :root {
-  font-size: 20px;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  //UserPreference variables
+  --font-size: 20px;
+  --font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  //Applied user preferences
+  font-size: var(--font-size);
+  font-family: var(--font-family);
+  //Default theme (temporal, until Material color present)
   --primary: #bb86fc;
   --primary-variant: #3700b3;
   --on-primary: #000000;
@@ -14,6 +19,11 @@
   --on-background: #ffffff;
   --surface: #222222;
   --on-surface: #ffffff;
+  /*
+  Colors should be calculated based on a target color, and a brightness value
+  both of which can be adjusted by a certain amount 
+  (User should select colors from the 50 line, and adjust the brightness separatelly)
+  */
 }
 
 body {
@@ -27,6 +37,7 @@ body {
   }
 }
 
-button, .button {
+button,
+.button {
   @include button;
 }
