--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -8,7 +8,7 @@
 ) {
     user-select: none;
     cursor: pointer;
-    font-size: 0.8 25em;
+    font-size: 0.825em;
     align-self: center;
     padding-inline: 0.775em;
     padding-block: 0.225em;
