--- a/src/app.scss
+++ b/src/app.scss
@@ -48,3 +48,10 @@ button,
 .button {
   @include button;
 }
+
+svg.icon{
+  width: 100%;
+  height: 100%;
+  color: var(--primary);
+  stroke:currentColor;
+}
