--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -55,3 +55,8 @@ Every tone value between 0 and 100 expresses the amount of light present in the 
     //Preset values are:
     // 0 | 10 | 20 | 30 | 40 | 50 | 60 | 70 | 80 | 95 | 99 | 100
 }
+
+@mixin avatar_mask(){
+    aspect-ratio: 1 / 1;
+    clip-path: inset(0 0 0 0 round 30%);
+}
